--- a/fetch_data.ipynb
+++ b/fetch_data.ipynb
@@ -2066,7 +2066,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "master",
    "language": "python",
    "name": "python3"
   },
